--- a/mowa.html
+++ b/mowa.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasłuchiwanie cyfr stabilne</title>
+<title>Nasłuchiwanie cyfr z wersją</title>
 <style>
-body{font-family:Arial;padding:20px;}
+body{font-family:Arial;padding:20px;position:relative;}
 button{font-size:18px;padding:12px 20px;margin-top:10px;z-index:1001;position:relative;}
 table{border-collapse:collapse;margin-top:20px;width:100%;}
 th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
@@ -13,6 +13,7 @@ th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
 #lock span{color:#fff;font-size:20px;position:absolute;bottom:30px;width:100%;text-align:center;}
 #info{font-size:18px;margin-top:10px;color:#222;}
 .new-row{background:#cfc;transition:background 1s;}
+#version{position:fixed;bottom:10px;right:10px;font-size:28px;color:#222;font-weight:bold;}
 </style>
 </head>
 <body>
@@ -28,17 +29,28 @@ th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
 <tr><th>#</th><th>Numer</th></tr>
 </table>
 
+<div id="version"></div>
+
 <script>
 let counter = 1;
 let listening = false;
 let wakeLock = null;
-let lastTranscript = ""; // do sprawdzania powtórek
+let lastTranscript = "";
+let versionCounter = 1;
 
 const table = document.getElementById("table");
 const toggleBtn = document.getElementById("toggle");
 const unlockBtn = document.getElementById("unlock");
 const lockDiv = document.getElementById("lock");
 const info = document.getElementById("info");
+const versionDiv = document.getElementById("version");
+
+function updateVersionDisplay() {
+    const now = new Date();
+    const str = versionCounter+" | "+now.getFullYear()+"-"+(now.getMonth()+1).toString().padStart(2,'0')+"-"+now.getDate().toString().padStart(2,'0')+
+        " "+now.getHours().toString().padStart(2,'0')+":"+now.getMinutes().toString().padStart(2,'0')+":"+now.getSeconds().toString().padStart(2,'0');
+    versionDiv.textContent = str;
+}
 
 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
 if (!SpeechRecognition) {
@@ -49,15 +61,15 @@ if (!SpeechRecognition) {
     recognition.interimResults = false;
 
     const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    recognition.continuous = !isMobile; // desktop: continuous, mobilnie: false
+    recognition.continuous = !isMobile;
 
-    async function enableWakeLock() {
-        try { wakeLock = await navigator.wakeLock.request("screen"); }
-        catch(e) { console.log("WakeLock error", e); }
+    async function enableWakeLock(){
+        try{ wakeLock = await navigator.wakeLock.request("screen"); }
+        catch(e){ console.log("WakeLock error", e); }
     }
-    function disableWakeLock() { if(wakeLock) { wakeLock.release(); wakeLock = null; } }
+    function disableWakeLock(){ if(wakeLock){ wakeLock.release(); wakeLock=null; } }
 
-    toggleBtn.onclick = async () => {
+    toggleBtn.onclick = async ()=>{
         if(!listening){
             lastTranscript = "";
             recognition.start();
@@ -66,11 +78,11 @@ if (!SpeechRecognition) {
             unlockBtn.style.display = "inline-block";
             lockDiv.style.display = "block";
             await enableWakeLock();
-            info.textContent = "Nagrywanie… powiedz cyfry po dwie (np. '59 12')";
+            info.textContent = "Nagrywanie… powiedz cyfry po dwie (np. '11 23')";
         }
     };
 
-    unlockBtn.onclick = () => {
+    unlockBtn.onclick = ()=>{
         recognition.stop();
         listening = false;
         toggleBtn.style.display = "inline-block";
@@ -80,13 +92,12 @@ if (!SpeechRecognition) {
         info.textContent = "Nagrywanie zatrzymane.";
     };
 
-    function addDigits(digits) {
-        if(digits.length === 0) { info.textContent = "Nie rozpoznano cyfr, powtórz nagranie"; return; }
+    function addDigits(digits){
+        if(digits.length === 0){ info.textContent="Nie rozpoznano cyfr, powtórz nagranie"; return; }
 
         let combined = digits.join('');
         while(combined.length < 4) combined += "-";
 
-        // sprawdzamy, czy ostatni wiersz jest taki sam
         const lastRow = table.rows[table.rows.length-1];
         if(lastRow && lastRow.cells[1].textContent === combined) return;
 
@@ -95,9 +106,11 @@ if (!SpeechRecognition) {
         row.insertCell().textContent = combined;
         row.classList.add("new-row");
         setTimeout(()=>row.classList.remove("new-row"),1000);
-        info.textContent = "Dodano numer: " + combined;
+        info.textContent="Dodano numer: "+combined;
 
-        // szybki feedback głosowy
+        versionCounter++;
+        updateVersionDisplay();
+
         if('speechSynthesis' in window){
             window.speechSynthesis.cancel();
             let speakStr = digits.join(' ');
@@ -105,11 +118,10 @@ if (!SpeechRecognition) {
         }
     }
 
-    recognition.onresult = (event) => {
+    recognition.onresult = (event)=>{
         const text = event.results[0][0].transcript.trim();
-        if(text === lastTranscript) return; // ignoruj powtórki
+        if(text === lastTranscript) return;
         lastTranscript = text;
-
         console.log("Rozpoznano frazę:", text);
 
         const digits = text.match(/\d+/g) || [];
@@ -118,11 +130,11 @@ if (!SpeechRecognition) {
         addDigits(digits);
     };
 
-    recognition.onerror = (e) => { info.textContent="Błąd: "+e.error; console.log("Błąd:", e.error); };
+    recognition.onerror = (e)=>{ info.textContent="Błąd: "+e.error; console.log("Błąd:", e.error); };
 
-    recognition.onend = () => {
+    recognition.onend = ()=>{
         if(listening){
-            setTimeout(()=>recognition.start(), isMobile?100:0); // restart tylko po krótkim delay
+            setTimeout(()=>recognition.start(), isMobile?100:0);
         }
     };
 }
