--- a/mowa.html
+++ b/mowa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasłuchiwanie cyfr z wersją</title>
+<title>Nasłuchiwanie cyfr wersja 001</title>
 <style>
 body{font-family:Arial;padding:20px;position:relative;}
 button{font-size:18px;padding:12px 20px;margin-top:10px;z-index:1001;position:relative;}
@@ -29,7 +29,7 @@ th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
 <tr><th>#</th><th>Numer</th></tr>
 </table>
 
-<div id="version"></div>
+<div id="version">001 | 2025-12-26 12:00:00</div>
 
 <script>
 let counter = 1;
@@ -47,21 +47,22 @@ const versionDiv = document.getElementById("version");
 
 function updateVersionDisplay() {
     const now = new Date();
-    const str = versionCounter+" | "+now.getFullYear()+"-"+(now.getMonth()+1).toString().padStart(2,'0')+"-"+now.getDate().toString().padStart(2,'0')+
+    const str = versionCounter.toString().padStart(3,'0')+" | "+
+        now.getFullYear()+"-"+(now.getMonth()+1).toString().padStart(2,'0')+"-"+now.getDate().toString().padStart(2,'0')+
         " "+now.getHours().toString().padStart(2,'0')+":"+now.getMinutes().toString().padStart(2,'0')+":"+now.getSeconds().toString().padStart(2,'0');
     versionDiv.textContent = str;
 }
 
 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-if (!SpeechRecognition) {
-    info.textContent = "Twoja przeglądarka nie wspiera rozpoznawania mowy.";
+if(!SpeechRecognition){
+    info.textContent="Twoja przeglądarka nie wspiera rozpoznawania mowy.";
 } else {
     const recognition = new SpeechRecognition();
     recognition.lang = "pl-PL";
     recognition.interimResults = false;
 
     const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    recognition.continuous = !isMobile;
+    recognition.continuous = !isMobile; // desktop continuous, mobilnie false
 
     async function enableWakeLock(){
         try{ wakeLock = await navigator.wakeLock.request("screen"); }
@@ -78,7 +79,7 @@ if (!SpeechRecognition) {
             unlockBtn.style.display = "inline-block";
             lockDiv.style.display = "block";
             await enableWakeLock();
-            info.textContent = "Nagrywanie… powiedz cyfry po dwie (np. '11 23')";
+            info.textContent="Nagrywanie… powiedz cyfry po dwie (np. '11 23')";
         }
     };
 
@@ -89,25 +90,24 @@ if (!SpeechRecognition) {
         unlockBtn.style.display = "none";
         lockDiv.style.display = "none";
         disableWakeLock();
-        info.textContent = "Nagrywanie zatrzymane.";
+        info.textContent="Nagrywanie zatrzymane.";
     };
 
     function addDigits(digits){
-        if(digits.length === 0){ info.textContent="Nie rozpoznano cyfr, powtórz nagranie"; return; }
-
+        if(digits.length===0){ info.textContent="Nie rozpoznano cyfr"; return; }
         let combined = digits.join('');
-        while(combined.length < 4) combined += "-";
+        while(combined.length<4) combined+="-";
 
         const lastRow = table.rows[table.rows.length-1];
-        if(lastRow && lastRow.cells[1].textContent === combined) return;
+        if(lastRow && lastRow.cells[1].textContent===combined) return;
 
         const row = table.insertRow();
         row.insertCell().textContent = counter++;
         row.insertCell().textContent = combined;
         row.classList.add("new-row");
         setTimeout(()=>row.classList.remove("new-row"),1000);
-        info.textContent="Dodano numer: "+combined;
 
+        info.textContent="Dodano numer: "+combined;
         versionCounter++;
         updateVersionDisplay();
 
@@ -120,21 +120,21 @@ if (!SpeechRecognition) {
 
     recognition.onresult = (event)=>{
         const text = event.results[0][0].transcript.trim();
-        if(text === lastTranscript) return;
-        lastTranscript = text;
-        console.log("Rozpoznano frazę:", text);
+        if(text===lastTranscript) return;
+        lastTranscript=text;
 
-        const digits = text.match(/\d+/g) || [];
+        console.log("Rozpoznano frazę:", text);
+        const digits = text.match(/\d+/g)||[];
         console.log("Wyciągnięte cyfry:", digits);
 
         addDigits(digits);
     };
 
-    recognition.onerror = (e)=>{ info.textContent="Błąd: "+e.error; console.log("Błąd:", e.error); };
+    recognition.onerror = (e)=>{ info.textContent="Błąd: "+e.error; console.log("Błąd:",e.error); };
 
     recognition.onend = ()=>{
         if(listening){
-            setTimeout(()=>recognition.start(), isMobile?100:0);
+            setTimeout(()=>recognition.start(),50); // szybki restart
         }
     };
 }
