--- a/mowa.html
+++ b/mowa.html
@@ -3,17 +3,67 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nasłuchiwanie cyfr wersja 001</title>
+<title>Nasłuchiwanie cyfr wersja 002</title>
 <style>
-body{font-family:Arial;padding:20px;position:relative;}
-button{font-size:18px;padding:12px 20px;margin-top:10px;z-index:1001;position:relative;}
-table{border-collapse:collapse;margin-top:20px;width:100%;}
-th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
-#lock{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);z-index:1000;touch-action:none;}
-#lock span{color:#fff;font-size:20px;position:absolute;bottom:30px;width:100%;text-align:center;}
-#info{font-size:18px;margin-top:10px;color:#222;}
-.new-row{background:#cfc;transition:background 1s;}
-#version{position:fixed;bottom:10px;right:10px;font-size:28px;color:#222;font-weight:bold;}
+body {
+    font-family: Arial, sans-serif;
+    padding: 20px;
+    position: relative;
+    background: #f8f9fa;
+}
+button {
+    font-size: 18px;
+    padding: 12px 24px;
+    margin: 10px 10px 0 0;
+    cursor: pointer;
+    border: none;
+    border-radius: 6px;
+}
+#toggle { background: #28a745; color: white; }
+#unlock { background: #dc3545; color: white; }
+table {
+    border-collapse: collapse;
+    margin-top: 20px;
+    width: 100%;
+    max-width: 500px;
+}
+th, td {
+    border: 1px solid #ccc;
+    padding: 12px;
+    font-size: 24px;
+    text-align: center;
+}
+th { background: #e9ecef; }
+.new-row { background: #d4edda; transition: background 1s; }
+#lock {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0,0,0,0.7);
+    z-index: 1000;
+    touch-action: none;
+}
+#lock span {
+    color: #fff;
+    font-size: 24px;
+    position: absolute;
+    bottom: 40px;
+    width: 100%;
+    text-align: center;
+}
+#info {
+    font-size: 18px;
+    margin-top: 15px;
+    color: #333;
+}
+#version {
+    position: fixed;
+    bottom: 10px;
+    right: 15px;
+    font-size: 16px;
+    color: #666;
+    font-weight: bold;
+}
 </style>
 </head>
 <body>
@@ -21,22 +71,22 @@ th,td{border:1px solid #000;padding:10px;font-size:22px;text-align:center;}
 <h2>Nasłuchiwanie cyfr po 2</h2>
 <button id="toggle">🎙 START</button>
 <button id="unlock" style="display:none;">⛔ STOP</button>
-<p id="info">Kliknij START, aby rozpocząć nagrywanie i powiedz cyfry po dwie.</p>
+<p id="info">Kliknij START, aby rozpocząć. Mów pary cyfr, np. „24 56” lub „13 12”.</p>
 
 <div id="lock"><span>Ekran zablokowany – nagrywanie aktywne</span></div>
 
 <table id="table">
-<tr><th>#</th><th>Numer</th></tr>
+    <tr><th>#</th><th>Numer</th></tr>
 </table>
 
-<div id="version">001 | 2025-12-26 12:00:00</div>
+<div id="version">002 | 2025-12-26</div>
 
 <script>
 let counter = 1;
 let listening = false;
 let wakeLock = null;
 let lastTranscript = "";
-let versionCounter = 1;
+let versionCounter = 2;
 
 const table = document.getElementById("table");
 const toggleBtn = document.getElementById("toggle");
@@ -47,94 +97,131 @@ const versionDiv = document.getElementById("version");
 
 function updateVersionDisplay() {
     const now = new Date();
-    const str = versionCounter.toString().padStart(3,'0')+" | "+
-        now.getFullYear()+"-"+(now.getMonth()+1).toString().padStart(2,'0')+"-"+now.getDate().toString().padStart(2,'0')+
-        " "+now.getHours().toString().padStart(2,'0')+":"+now.getMinutes().toString().padStart(2,'0')+":"+now.getSeconds().toString().padStart(2,'0');
+    const str = versionCounter.toString().padStart(3,'0') + " | " +
+        now.getFullYear() + "-" +
+        (now.getMonth()+1).toString().padStart(2,'0') + "-" +
+        now.getDate().toString().padStart(2,'0') + " " +
+        now.getHours().toString().padStart(2,'0') + ":" +
+        now.getMinutes().toString().padStart(2,'0') + ":" +
+        now.getSeconds().toString().padStart(2,'0');
     versionDiv.textContent = str;
 }
 
 const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-if(!SpeechRecognition){
-    info.textContent="Twoja przeglądarka nie wspiera rozpoznawania mowy.";
+
+if (!SpeechRecognition) {
+    info.textContent = "Twoja przeglądarka nie wspiera rozpoznawania mowy.";
 } else {
     const recognition = new SpeechRecognition();
     recognition.lang = "pl-PL";
     recognition.interimResults = false;
 
     const isMobile = /iPhone|iPad|iPod|Android/i.test(navigator.userAgent);
-    recognition.continuous = !isMobile; // desktop continuous, mobilnie false
+    recognition.continuous = !isMobile; // ciągłe na desktopie, przerywane na mobile
 
-    async function enableWakeLock(){
-        try{ wakeLock = await navigator.wakeLock.request("screen"); }
-        catch(e){ console.log("WakeLock error", e); }
+    async function enableWakeLock() {
+        try {
+            wakeLock = await navigator.wakeLock.request("screen");
+        } catch (e) {
+            console.log("WakeLock nieudany:", e);
+        }
     }
-    function disableWakeLock(){ if(wakeLock){ wakeLock.release(); wakeLock=null; } }
 
-    toggleBtn.onclick = async ()=>{
-        if(!listening){
+    function disableWakeLock() {
+        if (wakeLock) {
+            wakeLock.release().catch(() => {});
+            wakeLock = null;
+        }
+    }
+
+    toggleBtn.onclick = async () => {
+        if (!listening) {
             lastTranscript = "";
-            recognition.start();
-            listening = true;
-            toggleBtn.style.display = "none";
-            unlockBtn.style.display = "inline-block";
-            lockDiv.style.display = "block";
-            await enableWakeLock();
-            info.textContent="Nagrywanie… powiedz cyfry po dwie (np. '11 23')";
+            try {
+                recognition.start();
+                listening = true;
+                toggleBtn.style.display = "none";
+                unlockBtn.style.display = "inline-block";
+                lockDiv.style.display = "block";
+                await enableWakeLock();
+                info.textContent = "Nagrywanie… mów pary cyfr (np. „24 56”)";
+            } catch (e) {
+                info.textContent = "Błąd startu: " + e.message;
+            }
         }
     };
 
-    unlockBtn.onclick = ()=>{
+    unlockBtn.onclick = () => {
         recognition.stop();
         listening = false;
         toggleBtn.style.display = "inline-block";
         unlockBtn.style.display = "none";
         lockDiv.style.display = "none";
         disableWakeLock();
-        info.textContent="Nagrywanie zatrzymane.";
+        info.textContent = "Nagrywanie zatrzymane.";
     };
 
-    function addDigits(digits){
-        if(digits.length===0){ info.textContent="Nie rozpoznano cyfr"; return; }
-        let combined = digits.join('');
-        while(combined.length<4) combined+="-";
+    function addDigits(text) {
+        // Wyciągamy wszystkie cyfry z tekstu
+        const allDigits = text.replace(/\D/g, '');
+        if (allDigits.length === 0) {
+            info.textContent = "Nie rozpoznano cyfr";
+            return;
+        }
 
-        const lastRow = table.rows[table.rows.length-1];
-        if(lastRow && lastRow.cells[1].textContent===combined) return;
+        // Bierzemy ostatnie 4 cyfry
+        let combined = allDigits.slice(-4);
 
+        // Sprawdzamy duplikat z poprzednim wierszem
+        const lastRow = table.rows[table.rows.length - 1];
+        if (lastRow && lastRow.cells[1].textContent === combined) {
+            return;
+        }
+
+        // Dodajemy wiersz
         const row = table.insertRow();
         row.insertCell().textContent = counter++;
         row.insertCell().textContent = combined;
         row.classList.add("new-row");
-        setTimeout(()=>row.classList.remove("new-row"),1000);
+        setTimeout(() => row.classList.remove("new-row"), 1200);
 
-        info.textContent="Dodano numer: "+combined;
+        info.textContent = "Dodano: " + combined;
         versionCounter++;
         updateVersionDisplay();
 
-        if('speechSynthesis' in window){
+        // Synteza mowy – mówimy cyfry pojedynczo
+        if ('speechSynthesis' in window) {
             window.speechSynthesis.cancel();
-            let speakStr = digits.join(' ');
-            window.speechSynthesis.speak(new SpeechSynthesisUtterance(speakStr));
+            const speakStr = combined.split('').join(' ');
+            const utterance = new SpeechSynthesisUtterance(speakStr);
+            utterance.lang = "pl-PL";
+            window.speechSynthesis.speak(utterance);
         }
     }
 
-    recognition.onresult = (event)=>{
+    recognition.onresult = (event) => {
         const text = event.results[0][0].transcript.trim();
-        if(text===lastTranscript) return;
-        lastTranscript=text;
+        if (text === lastTranscript) return;
+        lastTranscript = text;
 
-        console.log("Rozpoznano frazę:", text);
-        const digits = text.match(/\d+/g)||[];
-        console.log("Wyciągnięte cyfry:", digits);
-
-        addDigits(digits);
+        console.log("Rozpoznano:", text);
+        addDigits(text);
     };
 
-    recognition.onerror = (e)=>{ info.textContent="Błąd: "+e.error; console.log("Błąd:",e.error); };
+    recognition.onerror = (e) => {
+        console.log("Błąd rozpoznawania:", e.error);
+        if (e.error === "no-speech" || e.error === "aborted") {
+            // ciche błędy – restartujemy bez komunikatu
+        } else {
+            info.textContent = "Błąd: " + e.error;
+        }
+    };
 
-    recognition.onend = ()=>{
-        if(listening){
-            setTimeout(()=>recognition.start(),50); // szybki restart
+    recognition.onend = () => {
+        if (listening) {
+            setTimeout(() => {
+                if (listening) recognition.start();
+            }, 80);
         }
     };
 }
